Update k8s deployment (add missing properties)

--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -35,6 +35,11 @@ spec:
             secretKeyRef:
               name: auth-db-secrets
               key: DB_PORT
+        - name: DB_USER
+          valueFrom:
+            secretKeyRef:
+              name: auth-db-secrets
+              key: DB_USER
         - name: DB_PASS
           valueFrom:
             secretKeyRef:
